@startuml
package "beerocks" {
  class TrafficSeparationTask {
    -m_btl_ctx : slave_thread&
    -m_mgr : std::unique_ptr<net::TrafficSeparationManager>
    -m_pending : bool
    -m_apply_pending : bool
    -m_next_run : std::chrono::steady_clock::time_point
    -m_pending_wds_ifaces : std::unordered_map<std::string, sPendingWdsIfaceState>
    -m_last_primary_vid : uint16_t
    +work() : void
    +handle_event(event_enum_value : uint8_t, event_obj : void*) : void
    -request_apply() : void
    -request_policy_update() : void
    -run_at(due) : void
    -clear_pending_apply() : void
    -clear_scheduled_work() : void
    -should_run_now() : bool
    -reconcile() : bool
    -handle_new_fh_iface(iface_name : std::string) : bool
    -handle_clear_fh_iface(iface_name : std::string) : bool
    -handle_new_wds_iface(iface_name : std::string) : bool
    -handle_clear_wds_iface(iface_name : std::string) : bool
    -retry_pending_wds_ifaces() : bool
    -cleanup_ts_runtime_state() : bool
    -ensure_transport_primary_vlan(primary_vid : uint16_t) : bool
    -reset_transport_monitoring_on_bridge() : bool
    -build_ts_config(cfg : net::sTrafficSeparationConfig&) : bool
    -get_ports_from_db(trunks) : bool
    -add_backhaul_connection_trunk(trunks) : bool
  }

  enum eEvent {
    TS_APPLY
    TS_POLICY_UPDATE
    TS_NEW_FH_IFACE
    TS_CLEAR_FH_IFACE
    TS_NEW_WDS_IFACE
    TS_CLEAR_WDS_IFACE
    TS_CLEAR
  }
}

package "beerocks::net" {
  struct sTrafficSeparationConfig {
    +private_bridge : std::string
    +private_vid    : uint32_t
    +guest_bridge   : std::string
    +guest_vid      : uint32_t
    +operator==(other : sTrafficSeparationConfig) : bool
  }

  struct sTrunkPort {
    +iface_name       : std::string
    +is_untagged_mode : bool
    +is_ethernet      : bool
  }

  enum eAccessRole {
    HOME
    GUEST
  }

  struct sAccessPort {
    +iface_name : std::string
    +role       : eAccessRole
  }

  enum eTsManagerState {
    NO_CONFIG
    CONFIGURED
    APPLIED
  }

  abstract class PortPlumbing {
    +apply(cfg : sTrafficSeparationConfig) : bool
    +clear() : bool
  }

  class TrunkPortPlumbing8021q {
    -m_trunk            : sTrunkPort
    -m_private_subiface : std::string
    -m_guest_subiface   : std::string
    -m_last_cfg         : sTrafficSeparationConfig
    -m_is_applied       : bool
    +TrunkPortPlumbing8021q(trunk_port : sTrunkPort)
    +apply(cfg : sTrafficSeparationConfig) : bool
    +clear() : bool
  }

  class AccessPortPlumbing8021q {
    -m_access_port : sAccessPort
    -m_is_applied  : bool
    +AccessPortPlumbing8021q(access_port : sAccessPort)
    +apply(cfg : sTrafficSeparationConfig) : bool
    +clear() : bool
  }

  class TrafficSeparationManager {
    -m_trunk_port_plumbing_map  : std::unordered_map<std::string, std::unique_ptr<PortPlumbing>>
    -m_access_port_plumbing_map : std::unordered_map<std::string, std::unique_ptr<PortPlumbing>>
    -m_config : sTrafficSeparationConfig
    -m_state : eTsManagerState
    +configure(cfg : sTrafficSeparationConfig) : bool
    +add_trunk_port(trunk_port : sTrunkPort) : bool
    +remove_trunk_port(iface_name : std::string) : bool
    +add_access_port(access_port : sAccessPort) : bool
    +remove_access_port(iface_name : std::string) : bool
    +apply_policies() : bool
    +clear_policies() : bool
    +reset() : bool
    +has_config() : bool
    +is_applied() : bool
    -has_any_ports() : bool
    -remove_all_trunk_ports() : bool
    -remove_all_access_ports() : bool
  }

  class traffic_separation_utils <<static>> {
    +resolve_profile_disallow_flags(dis_p1 : bool&, dis_p2 : bool&,
                                    policy : eUnsupportedProfileDisallowPolicy) : bool
    +is_untagged_mode(dis_p1 : bool, dis_p2 : bool,
                      policy : eUnsupportedProfileDisallowPolicy) : bool
  }
}

sAccessPort --> eAccessRole
TrafficSeparationTask --> eEvent
TrafficSeparationTask --> TrafficSeparationManager
TrafficSeparationTask ..> sTrafficSeparationConfig
TrafficSeparationTask ..> sTrunkPort
TrafficSeparationTask ..> sAccessPort

PortPlumbing <|.. TrunkPortPlumbing8021q
PortPlumbing <|.. AccessPortPlumbing8021q

TrafficSeparationManager --> PortPlumbing
TrafficSeparationManager --> sTrunkPort
TrafficSeparationManager --> sAccessPort
TrafficSeparationManager --> sTrafficSeparationConfig

note right of TrafficSeparationTask
  TS_APPLY requests an unconditional reconciliation.
  TS_POLICY_UPDATE requests one only when the
  effective config changed.

  work() runs reconcile() for a pending apply and
  retry_pending_wds_ifaces() for deferred WDS
  readiness checks.

  reconcile() clears active plumbing, refreshes the
  config, re-adds persistent DB-owned trunks, and
  reapplies policies on already managed ports.

  Pure-FH and exact-WDS ownership is event-driven:
  TS_NEW_* adds one iface, TS_CLEAR_* removes one.
  reconcile() does not reconcile FH access ports from
  DB anymore.

  TS_CLEAR clears active policies plus deferred
  task state. There is no TS_RESET event path in
  the current branch.
end note

note right of TrunkPortPlumbing8021q
  tagged wireless trunk:
  remove parent iface from its bridge, create
  private and guest VLAN subifaces, attach them
  to the TS bridges

  tagged ethernet trunk:
  keep parent iface native and create guest VLAN
  subiface only

  untagged trunk:
  no bridge re-plumbing
end note

note right of AccessPortPlumbing8021q
  apply() warns and skips if the pure-FH iface is
  missing.

  clear() treats a vanished iface as already
  cleaned so disable races do not fail remove.
end note

note bottom of TrafficSeparationManager
  clear_policies() clears plumbing state but keeps
  trunk and access ownership maps.

  reset() calls clear_policies(), removes all
  managed ports, clears config, and returns to
  NO_CONFIG, but TrafficSeparationTask does not
  emit a TS_RESET event in the current branch.
end note

@enduml
